--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ body{
     display: flex;
     width: 90vmin;
     height: 90vmin;
-    min-height: 700px;
     border-radius: 10px;
     background-color: white;
     flex-direction: column;
@@ -180,6 +179,10 @@ input{
     box-sizing: border-box;
     border: 2px solid black;
     border-radius: 4px;
+  }
+  img{
+    width: 10vw;
+    height: auto;
   }
 
   .radio-group {
@@ -349,7 +352,7 @@ body {
     justify-content: center;
     height: 100%;
     width: 15vw;
-    max-width: 230px;
+    max-width: 180px;
     border: 2px solid var(--primary-color);
     border-radius: 8px;
     padding: 5px;
@@ -366,7 +369,7 @@ body {
 
 .input-container label {
     color: var(--primary-color);
-    font-size: clamp(1.4vw, 1.4vw, 150px);
+    font-size: clamp(1vw, 1vw, 40px);
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1px;
